# ruka_mg996r

./: LICENSE  README.md  pyproject.toml
data/calibration/: mg996r_calibration.json
src/ruka_mg996r/: __init__.py
src/ruka_mg996r/calibration/: __main__.py  range_finder.py  tendon_calibrator.py
src/ruka_mg996r/client/: __main__.py
src/ruka_mg996r/server/: __main__.py  config.py  servo_controller.py
src/ruka_mg996r/shared/: __init__.py  constants.py  types.py  utils.py
tests/: conftest.py
tests/test_server/: test_config.py  test_servo_controller.py
