[project]
name = "ruka-mg996r"
version = "0.1.0"
description = "Webcam-controlled RUKA robotic hand with MG996R servos"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jon Duea", email = "jdueadev@gmail.com" }]
requires-python = ">=3.13"
keywords = [
    "robotics",
    "hand",
    "teleoperation",
    "mediapipe",
    "servo",
    "computer-vision",
]
dependencies = ["numpy>=2.4.1", "pydantic>=2.12.5", "websockets>=16.0"]

[project.optional-dependencies]
server = [
    "adafruit-circuitpython-servokit>=1.3.22",
    "fastapi>=0.128.0",
    "scipy>=1.17.0",
    "uvicorn>=0.40.0",
]
client = ["mediapipe>=0.10.32", "opencv-python>=4.13.0.90"]
calibration = ["adafruit-circuitpython-servokit>=1.3.22"]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
]
all = ["ruka-mg996r[server,client,calibration,dev,docs]"]

[project.scripts]
ruka-server = "ruka_mg996r.server.__main__:main"
ruka-client = "ruka_mg996r.client.__main__:main"
ruka-calibrate = "ruka_mg996r.calibration.__main__:main"

[project.urls]
Homepage = "https://github.com/jmduea/ruka_mg996r"
Documentation = "https://github.com/jmduea/ruka_mg996r#readme"
Repository = "https://github.com/jmduea/ruka_mg996r.git"
Issues = "https://github.com/jmduea/ruka_mg996r/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["ruka_mg996r"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=ruka_mg996r --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
